k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-routing
spec:
  ingressClassName: nginx
  rules:
    - host: poilusperdus.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cso-gateway
                port:
                  number: 8080
